# autocallable-pnl-hedging-simulator

./: .gitignore  README.md  pyproject.toml
scripts/: run_desk_simulation.py  run_pricing.py  run_stress_tests.py
src/desk_sim/: dynamics.py  greeks.py  hedge_sim.py  instruments.py  market.py  pricer_mc.py  roll_greeks.py  roll_pricer.py  scenarios.py
tests/: test_dynamics.py  test_greeks.py  test_hedge_sim_smoke.py  test_market.py  test_payoff.py  test_smoke_pricer.py
